# coinbase-api-technical

./: Cargo.toml  README.md
src/: cli.rs  client.rs  main.rs  model.rs  tui.rs
