[package]
name = "binance-api-tech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.1", features = ["derive"] }
crossterm = "0.25.0"
eyre = "0.6.8"
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tui = "0.19.0"
websockets = "0.3.0"
